src/main/java/com/example/authjwtdemo/error/UnAuthenticatedError.java
package com.example.authjwtdemo.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.server.ResponseStatusException;

public class UnAuthenticatedError extends ResponseStatusException {
    public UnAuthenticatedError() {
        super(HttpStatus.UNAUTHORIZED,"Authentication Error.");
    }
}
